[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ticktick-sdk"
version = "0.4.3"
description = "A comprehensive async Python SDK for TickTick with MCP server support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "dev-mirzabicer" }
]
keywords = [
    "ticktick",
    "task-management",
    "productivity",
    "api",
    "async",
    "mcp",
    "model-context-protocol",
    "ai-assistant",
    "todo",
    "gtd",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Scheduling",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "mcp>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "python-dotenv>=1.0.0",  # For loading .env in live tests
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "respx>=0.21.0",  # For mocking httpx
    "freezegun>=1.2.0",  # For time-based testing
]

[project.scripts]
ticktick-sdk = "ticktick_sdk.cli:cli_main"

[project.urls]
Homepage = "https://github.com/dev-mirzabicer/ticktick-sdk"
Repository = "https://github.com/dev-mirzabicer/ticktick-sdk"
Documentation = "https://github.com/dev-mirzabicer/ticktick-sdk#readme"
Issues = "https://github.com/dev-mirzabicer/ticktick-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ticktick_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Use session scope for event loops to share httpx client in live mode
# Without this, each test gets a new event loop, causing "Event loop is closed" errors
# BOTH settings are needed - one for fixtures, one for tests
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: Unit tests with mocked API",
    "tasks: Tests for task operations",
    "projects: Tests for project operations",
    "tags: Tests for tag operations",
    "habits: Tests for habit operations",
    "folders: Tests for folder operations",
    "user: Tests for user operations",
    "lifecycle: Tests for client lifecycle",
    "errors: Tests for error handling",
    "focus: Tests for focus/pomodoro operations",
    "sync: Tests for sync operations",
    "pinning: Tests for task pinning operations",
    "columns: Tests for kanban column operations",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # line too long (handled by formatter)

[tool.ruff.lint.isort]
known-first-party = ["ticktick_sdk"]
